force-app/main/default/objects/CareRequest/fields/Appeal_Sub_Type__c.field-meta.xml
<CustomField>
    <fullName>Appeal_Sub_Type__c</fullName>
    <label>Appeal Sub-Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Inpatient Hospital Services</fullName>
            </value>
            <value>
                <fullName>Outpatient Services</fullName>
            </value>
            <value>
                <fullName>SNF Services</fullName>
            </value>
            <value>
                <fullName>Home Health Services</fullName>
            </value>
            <value>
                <fullName>CORF Services</fullName>
            </value>
            <value>
                <fullName>DME (Durable Medical Equipment)</fullName>
            </value>
            <value>
                <fullName>Part B Drug</fullName>
            </value>
            <value>
                <fullName>Part D Drug - Formulary Exception</fullName>
            </value>
            <value>
                <fullName>Part D Drug - Tiering Exception</fullName>
            </value>
            <value>
                <fullName>Part D Drug - Prior Authorization</fullName>
            </value>
            <value>
                <fullName>Emergency Services</fullName>
            </value>
            <value>
                <fullName>Urgently Needed Services</fullName>
            </value>
            <value>
                <fullName>Payment Appeal</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>