force-app/main/default/objects/CareRequest/fields/Authorization_Reference_Identifier__c.field-meta.xml
<CustomField>
    <fullName>Authorization_Reference_Identifier__c</fullName>
    <label>Authorization Reference Identifier</label>
    <length>255</length>
    <type>Text</type>
</CustomField>