force-app/main/default/objects/CareRequest/fields/Grievance_Sub_Type__c.field-meta.xml
<CustomField>
    <fullName>Grievance_Sub_Type__c</fullName>
    <label>Grievance Sub-Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Quality of Care - Misdiagnosis</fullName>
            </value>
            <value>
                <fullName>Quality of Care - Inappropriate Treatment</fullName>
            </value>
            <value>
                <fullName>Quality of Care - Adverse Impact</fullName>
            </value>
            <value>
                <fullName>Access - Wait Time</fullName>
            </value>
            <value>
                <fullName>Access - Network Availability</fullName>
            </value>
            <value>
                <fullName>Access - Appointment Scheduling</fullName>
            </value>
            <value>
                <fullName>Provider Communication</fullName>
            </value>
            <value>
                <fullName>Customer Service - Phone Access</fullName>
            </value>
            <value>
                <fullName>Customer Service - Responsiveness</fullName>
            </value>
            <value>
                <fullName>Billing Issue</fullName>
            </value>
            <value>
                <fullName>Plan Material Unclear</fullName>
            </value>
            <value>
                <fullName>Benefit Design</fullName>
            </value>
            <value>
                <fullName>Appeals Process</fullName>
            </value>
            <value>
                <fullName>Plan Decision to Extend Timeframe</fullName>
            </value>
            <value>
                <fullName>Plan Decision Not to Expedite</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>