force-app/main/default/objects/CareRequest/fields/Reason_For_Request__c.field-meta.xml
<CustomField>
    <fullName>Reason_For_Request__c</fullName>
    <label>Reason For Request</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>