force-app/main/default/objects/CareRequest/fields/Related_Claim__c.field-meta.xml
<CustomField>
    <fullName>Related_Claim__c</fullName>
    <label>Related Claim</label>
    <referenceTo>Claim__c</referenceTo>
    <relationshipLabel>Related Care Requests</relationshipLabel>
    <relationshipName>Related_Care_Requests</relationshipName>
    <type>Lookup</type>
</CustomField>