force-app/main/default/objects/CareRequest/fields/Related_Prior_Auth__c.field-meta.xml
<CustomField>
    <fullName>Related_Prior_Auth__c</fullName>
    <label>Related Prior Auth</label>
    <referenceTo>CareRequest</referenceTo>
    <relationshipLabel>Related A&amp;G Requests</relationshipLabel>
    <relationshipName>Related_AG_Requests</relationshipName>
    <type>Lookup</type>
</CustomField>