force-app/main/default/objects/CareRequest/fields/Service_Type__c.field-meta.xml
<CustomField>
    <fullName>Service_Type__c</fullName>
    <label>Service Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Pre Service</fullName>
            </value>
            <value>
                <fullName>Post Service</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>